# valet

./: .gitignore  .gitmodules  Makefile  README.md  analyze_profiles.py  differential_drive.py  flake.nix  profile.prof  profile_pre_bounds_caching.prof  pyproject.toml  reeds_shepp-0.1.1-cp311-cp311-linux_x86_64.whl  report.typ
media/profiling/1/: profile_post_heading_cache.prof
media/profiling/2/: post_AABB_env.prof  pre_AABB_env.prof
media/profiling/4/: pre_minus_trans.prof  profile.prof
report/: refs.bib  report.typ  template.typ
report/data/: benchmark.csv
report/media/: gen_aabb_fig.py  gen_heading_cache_fig.py
report/media/scripts/: analyze_profiles.py  gen_aabb_fig.py  gen_grid_spacing_fig.py  gen_heading_cache_fig.py  gen_path_overlap_fig.py  gen_primitives_fig.py  parse_benchmark.py
report/newcm-8.0.0/doc/: colored-diacritics.pdf.gpg  integral.pdf.gpg  mathkern-example.pdf.gpg  mathkern-example2.pdf.gpg  mathscript-cropped.pdf.gpg  mathscript.pdf.gpg  newcm-doc.pdf.gpg  (+5 more)
scratch/: test.py  test2.py
src/: config.py  main.py  static_checks.py  utils.py
src/Bots/: BotState.py  Bots.py  Bundle.py  __init__.py  geometry_helpers.py  primitives.py
src/Planner/: AstarConfig.py  LatticeConfig.py  Primitive.py  __init__.py  astar.py  postprocessing.py  primitives.py
src/Valet_Assignment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bots/: __init__.py  _protocol_checks.py  bots.py  geometry.py  state.py
src/environment/: __init__.py  grid.py  obstacle.py
src/planner/: __init__.py  astar.py  postprocessing.py
src/planners/: LatticeConfig.py  utils.py
src/simulator/: BotState.py  Bundle.py  LatticeConfig.py  __init__.py  config.py  draw.py  main.py  obstacle.py  recorder.py  render.py  renderer.py  robot_geometry.py  simulator.py  trailer.py  utils.py
(+46 files in other folders)
