[project]
 name = "Valet_Assignment" 
 version = "0.1.0"
 authors = [
    {name = "Liam Jennings"},
 ]
 dependencies = [
    "matplotlib~=3.10",
    "numpy~=2.3.3",
    "scipy~=1.16.2",
    "pygame~=2.6.1",
    "shapely~=2.1.2",
    "cython"
]
 

[project.scripts]
runsim="main:main"

[tool.mypy]
python_executable = ".venv/bin/python"

[tool.pyright]
extraPaths = ["deps/pyReedsShepp"]

# needed for building the reeds-shepp dependency
[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"